--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="h-screen w-screen bg-[#FF7A7A] opacity-50
-  before:content-center before:w-10 before:min-h-10 before:absolute before:top-0 before:left-0 before:bg-[#000]">
+  <div class="h-screen w-screen bg-intro-mobile bg-no-repeat bg-center
+  before:content-center before:w-full before:min-h-screen before:absolute before:top-0 before:left-0 before:bg-[#FF7A7A] before:opacity-95 before:-z-10">
     <section>
-      <h1 class="">Learn to code by watching others</h1>
-      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
+      <h1 class="text-center text-white font-semibold text-3xl">Learn to code by watching others</h1>
+      <p class="text-center text-[#fedfdf] font-normal text-[16px]">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
     </section>
     <section>
-      <p>
-        <span>Try it free 7 days </span>Then $20/mo. Thereafter
+      <p class="w-full h-16 bg-[#5F54A4] rounded-xl text-white font-normal text-center grid place-content-center">
+        <span class="font-medium">Try it free 7 days </span>Then $20/mo. Thereafter
       </p>
-      <form action="">
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="text" placeholder="Email Address">
-        <input type="text" placeholder="Password">
-        <button type="submit">CLAIM YOUR FREE TRIAL</button>
-        <p>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></p>
+      <form class="w-full h-96 bg-white rounded-xl flex flex-col items-center" action="">
+        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="First Name">
+        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="Last Name">
+        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="Email Address">
+        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="Password">
+        <button class="w-full h-12 bg-[#38CB8B] rounded-lg text-white font-normal text-center grid place-content-center"" type="submit">CLAIM YOUR FREE TRIAL</button>
+        <p class="text-sm text-[#B8B5D3] font-normal">By clicking the button, you are agreeing to our <a class="font-semibold text-[#FF7A7A]" href="#">Terms and Services</a></p>
       </form>
     </section>
   </div>
