--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
-  <div class="h-screen w-screen bg-intro-mobile bg-no-repeat bg-center
+<body class="h-full">
+  <div class="h-screen w-screen bg-intro-mobile  bg-center
   before:content-center before:w-full before:min-h-screen before:absolute before:top-0 before:left-0 before:bg-[#FF7A7A] before:opacity-95 before:-z-10">
-    <section>
-      <h1 class="text-center text-white font-semibold text-3xl">Learn to code by watching others</h1>
-      <p class="text-center text-[#fedfdf] font-normal text-[16px]">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
+    <section class="w-[90vw] max-w-[700px] mx-auto">
+      <h1 class="text-center text-white font-semibold text-3xl pt-10">Learn to code by watching others</h1>
+      <p class="text-center text-[#fedfdf] font-normal text-[16px] mt-4">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
     </section>
-    <section>
-      <p class="w-full h-16 bg-[#5F54A4] rounded-xl text-white font-normal text-center grid place-content-center">
+    <section class="w-[90vw] max-w-[700px] mx-auto my-6">
+      <p class="w-full h-20 bg-[#5F54A4] rounded-xl text-white font-normal text-center grid place-content-center shadow-[0px_8px_0px_0px_rgba(0,0,0,0.2)]">
         <span class="font-medium">Try it free 7 days </span>Then $20/mo. Thereafter
       </p>
-      <form class="w-full h-96 bg-white rounded-xl flex flex-col items-center" action="">
-        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="First Name">
-        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="Last Name">
-        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="Email Address">
-        <input class="outline-none h-10  border-[1px] rounded-lg border-[#B8B5D3] pl-5 placeholder:font-semibold" type="text" placeholder="Password">
-        <button class="w-full h-12 bg-[#38CB8B] rounded-lg text-white font-normal text-center grid place-content-center"" type="submit">CLAIM YOUR FREE TRIAL</button>
-        <p class="text-sm text-[#B8B5D3] font-normal">By clicking the button, you are agreeing to our <a class="font-semibold text-[#FF7A7A]" href="#">Terms and Services</a></p>
+      <form class="w-full h-auto bg-white rounded-lg flex flex-col items-center mt-6 py-6 shadow-[0px_8px_0px_0px_rgba(0,0,0,0.2)]" action="">
+        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="First Name">
+        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="Last Name">
+        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="Email Address">
+        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="Password">
+        <button class="w-[90%] h-12 bg-[#38CB8B] rounded-md text-white font-normal text-center grid place-content-center shadow-[0px_4px_0px_0px_rgba(0,0,0,0.2)]"" type="submit">CLAIM YOUR FREE TRIAL</button>
+        <p class="w-[90%] mt-4 text-center text-[0.65rem] leading-[0.75rem] text-[#B8B5D3] font-normal">By clicking the button, you are agreeing to our <a class="font-semibold text-[#FF7A7A]" href="#">Terms and Services</a></p>
       </form>
     </section>
   </div>
