--- a/index.html
+++ b/index.html
@@ -10,26 +10,56 @@
 </head>
 <body class="h-full">
   <div class="h-screen w-screen bg-intro-mobile  bg-center
-  before:content-center before:w-full before:min-h-screen before:absolute before:top-0 before:left-0 before:bg-[#FF7A7A] before:opacity-95 before:-z-10">
+  before:content-center before:w-full before:min-h-screen before:absolute before:top-0 before:left-0 before:bg-[#FF7A7A] before:opacity-95 before:-z-10
+  xl:flex xl:items-center xl:px-20">
     <section class="w-[90vw] max-w-[700px] mx-auto">
-      <h1 class="text-center text-white font-semibold text-3xl pt-10">Learn to code by watching others</h1>
-      <p class="text-center text-[#fedfdf] font-normal text-[16px] mt-4">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
+      <h1 class="text-center text-white font-semibold text-3xl pt-10
+      xl:text-5xl xl:text-left">Learn to code by watching others</h1>
+      <p class="text-center text-[#fedfdf] font-normal text-[16px] mt-4
+      xl:text-left xl:max-w-[500px]">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable</p>
     </section>
     <section class="w-[90vw] max-w-[700px] mx-auto my-6">
-      <p class="w-full h-20 bg-[#5F54A4] rounded-xl text-white font-normal text-center grid place-content-center shadow-[0px_8px_0px_0px_rgba(0,0,0,0.2)]">
+      <p class="w-full h-20 bg-[#5F54A4] rounded-xl text-white font-normal text-center grid place-content-center shadow-[0px_8px_0px_0px_rgba(0,0,0,0.2)]
+      xl:h-14">
         <span class="font-medium">Try it free 7 days </span>Then $20/mo. Thereafter
       </p>
       <form class="w-full h-auto bg-white rounded-lg flex flex-col items-center mt-6 py-6 shadow-[0px_8px_0px_0px_rgba(0,0,0,0.2)]" action="">
-        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="First Name">
-        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="Last Name">
-        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="Email Address">
-        <input class="w-[90%] mb-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold" type="text" placeholder="Password">
-        <button class="w-[90%] h-12 bg-[#38CB8B] rounded-md text-white font-normal text-center grid place-content-center shadow-[0px_4px_0px_0px_rgba(0,0,0,0.2)]"" type="submit">CLAIM YOUR FREE TRIAL</button>
+        <div class="w-[90%] flex flex-col items-center relative inputs">
+          <input class="w-full outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold input_name 
+          focus:invalid:border-2 focus:invalid:border-[#FF7A7A]" required type="text" placeholder="First Name">
+          <svg class="invisible absolute top-[7px] right-0 mr-2 " width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+          <p class="text-[#FF7979] h-0 text-xs font-semibold ml-auto pt-1 overflow-hidden 
+          transition-{height} duration-300">First Name cannot be empty</p>
+        </div>
+        <div class="w-[90%] flex flex-col items-center relative inputs">
+          <input class="w-full mt-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold input_lastname 
+          focus:invalid:border-2 focus:invalid:border-[#FF7A7A]" required type="text" placeholder="Last Name">
+          <svg class="invisible absolute top-[19px] right-0 mr-2 " width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+          <p class="text-[#FF7979] h-0 text-xs font-semibold ml-auto pt-1 overflow-hidden 
+          transition-{height} duration-300">Last Name cannot be empty</p>
+        </div>
+        <div class="w-[90%] flex flex-col items-center relative inputs">
+          <input class="w-full mt-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold input_email 
+          focus:invalid:border-2 focus:invalid:border-[#FF7A7A]" required type="email" placeholder="Email Address">
+          <svg class="invisible absolute top-[19px] right-0 mr-2 " width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+          <p class="text-[#FF7979] h-0 text-xs font-semibold ml-auto pt-1 overflow-hidden 
+          transition-{height} duration-300">Looks like this is not an email</p>
+        </div>
+        <div class="w-[90%] flex flex-col items-center relative inputs">
+          <input class="w-full mt-3 outline-none h-10  border-[1px] rounded-md border-[#B8B5D3] pl-4 placeholder:text-sm placeholder:font-semibold input_password 
+          focus:invalid:border-2 focus:invalid:border-[#FF7A7A]" required type="password" placeholder="Password">
+          <svg class="invisible absolute top-[19px] right-0 mr-2 " width="24" height="24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#FF7979" cx="12" cy="12" r="12"/><rect fill="#FFF" x="11" y="6" width="2" height="9" rx="1"/><rect fill="#FFF" x="11" y="17" width="2" height="2" rx="1"/></g></svg>
+          <p class="text-[#FF7979] h-0 text-xs font-semibold ml-auto pt-1 overflow-hidden 
+          transition-{height} duration-300">Password cannot be empty</p>
+        </div>
+        <button class="w-[90%] mt-3 h-12 bg-[#38CB8B] rounded-md text-white font-normal text-center grid place-content-center shadow-[0px_4px_0px_0px_rgba(0,0,0,0.2)] submit_button 
+        hover:bg-opacity-50" type="submit">CLAIM YOUR FREE TRIAL</button>
         <p class="w-[90%] mt-4 text-center text-[0.65rem] leading-[0.75rem] text-[#B8B5D3] font-normal">By clicking the button, you are agreeing to our <a class="font-semibold text-[#FF7A7A]" href="#">Terms and Services</a></p>
       </form>
     </section>
+    
   </div>
   
-
+<script src="./src/main.js"></script>
 </body>
 </html>
