--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   
-  <link href="./docs/output.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="./docs/output.css">
 </head>
 <body class="h-full">
   <div class="h-screen w-screen bg-intro-mobile  bg-center
